--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       justify-content: center;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         sans-serif;
-      background: #020617;
-      color: #e5e7eb;
+      background: #c7e6ff;   /* light sky blue */
+      color: #1a1a1a;        /* dark text for readability */
     }
     .card {
       padding: 20px 24px;
@@ -81,75 +81,68 @@
     <div id="status">Fetching latest value…</div>
   </div>
   <script>
-    const NOAA_URL =
-      "https://gml.noaa.gov/webdata/ccgg/trends/co2/co2_daily_mlo.txt";
+  const NOAA_URL =
+    "https://gml.noaa.gov/webdata/ccgg/trends/co2/co2_daily_mlo.txt";
 
-    // Use AllOrigins JSON endpoint instead of /raw to avoid issues
-    const DATA_URL =
-      "https://api.allorigins.win/get?url=" + encodeURIComponent(NOAA_URL);
+  // ThingProxy (alternative free CORS proxy)
+  const DATA_URL =
+    "https://thingproxy.freeboard.io/fetch/" + encodeURIComponent(NOAA_URL);
 
-    const valueEl = document.getElementById("co2-value");
-    const dateLabelEl = document.getElementById("date-label");
-    const statusEl = document.getElementById("status");
+  const valueEl = document.getElementById("co2-value");
+  const dateLabelEl = document.getElementById("date-label");
+  const statusEl = document.getElementById("status");
 
-    async function fetchCO2() {
-      try {
-        statusEl.textContent = "Fetching latest value…";
+  async function fetchCO2() {
+    try {
+      statusEl.textContent = "Fetching latest value…";
 
-        const resp = await fetch(DATA_URL, { cache: "no-cache" });
-        if (!resp.ok) {
-          throw new Error("HTTP " + resp.status);
-        }
-
-        // AllOrigins /get returns JSON with a `contents` field
-        const json = await resp.json();
-        const text = json.contents;
-        const lines = text.trim().split("\n");
-
-        let co2 = null;
-        let year, month, day;
-
-        // Walk from the bottom up to find the latest valid data line
-        for (let i = lines.length - 1; i >= 0; i--) {
-          const line = lines[i].trim();
-          if (!line || line.startsWith("#")) continue;
-
-          const parts = line.split(/\s+/);
-          if (parts.length < 5) continue;
-
-          year = parts[0];
-          month = parts[1];
-          day = parts[2];
-
-          const value = parseFloat(parts[4]); // daily mean ppm
-
-          // Skip missing/invalid values
-          if (!Number.isFinite(value) || value < 200 || value > 700) continue;
-          co2 = value;
-          break;
-        }
-
-        if (co2 === null) {
-          throw new Error("Could not find a valid CO₂ value in the file");
-        }
-
-        // Update display
-        valueEl.textContent = co2.toFixed(2);
-        const mm = String(month).padStart(2, "0");
-        const dd = String(day).padStart(2, "0");
-        dateLabelEl.textContent = `Latest date: ${year}-${mm}-${dd}`;
-
-        const updated = new Date().toLocaleString();
-        statusEl.textContent = `Last updated from NOAA (via proxy): ${updated}`;
-      } catch (err) {
-        console.error(err);
-        statusEl.innerHTML =
-          '<span class="error">Error fetching CO₂ data. Please try again later.</span>';
+      const resp = await fetch(DATA_URL, { cache: "no-cache" });
+      if (!resp.ok) {
+        throw new Error("HTTP " + resp.status);
       }
-    }
 
-    fetchCO2();
-  </script>
-  
+      const text = await resp.text();
+      const lines = text.trim().split("\n");
+
+      let co2 = null;
+      let year, month, day;
+
+      for (let i = lines.length - 1; i >= 0; i--) {
+        const line = lines[i].trim();
+        if (!line || line.startsWith("#")) continue;
+
+        const parts = line.split(/\s+/);
+        if (parts.length < 5) continue;
+
+        year = parts[0];
+        month = parts[1];
+        day = parts[2];
+        const value = parseFloat(parts[4]);
+
+        if (!Number.isFinite(value) || value < 200 || value > 700) continue;
+        co2 = value;
+        break;
+      }
+
+      if (co2 === null) {
+        throw new Error("Could not parse CO₂ value");
+      }
+
+      const mm = String(month).padStart(2, "0");
+      const dd = String(day).padStart(2, "0");
+
+      valueEl.textContent = co2.toFixed(2);
+      dateLabelEl.textContent = `Latest date: ${year}-${mm}-${dd}`;
+      statusEl.textContent = `Last updated (via proxy): ${new Date().toLocaleString()}`;
+
+    } catch (err) {
+      console.error(err);
+      statusEl.innerHTML =
+        '<span class="error">Error fetching CO₂ data. Please try again later.</span>';
+    }
+  }
+
+  fetchCO2();
+</script>  
 </body>
 </html>
