--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     .card {
       padding: 20px 24px;
       border-radius: 16px;
-      background: #020617;
-      border: 1px solid #1f2937;
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.5);
+      background: rgba(255, 255, 255, 0.85);
+      border: 1px solid #90b9e0;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
       max-width: 420px;
       width: 90vw;
     }
