--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       color: #b91c1c;
     }
   </style>
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#c7e6ff" />
 </head>
 <body>
   <div class="card">
@@ -115,6 +117,15 @@
     }
 
     fetchCO2();
+  </script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .catch((err) => console.error("SW registration failed:", err));
+      });
+    }
   </script>
 </body>
 </html>
